+Added animation rule to be used by the background image once it is loaded by javascript. +Made translucent title bar to hold the welcome text. +Added animation to the title bar. +Made footer fixed and font size smaller. +Got a better font. +Sorted the scrollbar on the side with "overflow: hidden;"

--- a/styles/default.css
+++ b/styles/default.css
@@ -1,32 +1,51 @@
-html
-{
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@keyframes flexbox {
+	from{width: 0%;};
+	to{width: 100%;};
+}
+@-webkit-keyframes bg-transform {
+	0% {background-position: 0% 100%;}
+	50% {background-position: 100% 0%;}
+	100% {background-position: 0% 100%;}
+}
+h1, p {
+	font-family: "Open Sans", "Lucida Grande", sans-serif;
+	color: White;
+	text-align:center;
+}
+p {
+	font-size: small;
+}
+html {
 	height: 100%;
-	overflow:hidden;
+	overflow: hidden;
 }
-body
-{
-	height: 100%;
+body {
+	height: inherit;
 }
-footer
-{
-	bottom: 10px;
+footer {
+	position: fixed;
+	bottom: 0;
 }
-.parent
-{
-	height: 100%;
-	
-}
-.flexbox
-{
-	width: 100%;
+.content {
 	height: 100%;
 	display: flex;
 	flex-flow: flex-flox;
 	justify-content: center;
-	align-content:center;
+	align-content: center;
 	align-items: center;
 }
-#centre-header
-{
-	flex: 0,1,auto;
+.flexbox {
+	width: 100%;
+	display: flex;
+	flex-flow: flex-flox;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
+	animation-name: flexbox;
+	animation-duration: 1s;
+}
+#centre-title {
+	flex: 1;
+	background-color: rgba(0, 0, 0, 0.6);
 }
